--- a/PIStatsOverlay.csproj
+++ b/PIStatsOverlay.csproj
@@ -67,10 +67,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <Compile Include="Objects\StatsOverlay.cs" />
+    <Compile Include="Patches\DiseaseStatsPatch.cs" />
     <Compile Include="Patches\TechDescPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Utils\RichString.cs" />
+    <Compile Include="Utils\StatFormat.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>start XCOPY /Y /R "$(TargetPath)" "D:\SteamLibrary\steamapps\common\PlagueInc\Mods\$(ProjectName)"
+start XCOPY /Y /R "$(ProjectDir)\Statics\Info.json" "D:\SteamLibrary\steamapps\common\PlagueInc\Mods\$(ProjectName)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
