--- a/PIStatsOverlay.csproj
+++ b/PIStatsOverlay.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>D:\SteamLibrary\steamapps\common\PlagueInc\PlagueIncEvolved_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
+    <Reference Include="I18N.DotNet, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\I18N.DotNet.1.3.1\lib\net48\I18N.DotNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -75,10 +78,17 @@
     <Compile Include="Utils\RichString.cs" />
     <Compile Include="Utils\StatFormat.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+    <None Include="Statics\Info.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\I18N.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>start XCOPY /Y /R "$(TargetPath)" "D:\SteamLibrary\steamapps\common\PlagueInc\Mods\$(ProjectName)"
+start XCOPY /Y /R "$(ProjectDir)\bin\Debug\I18N.DotNet.dll" "D:\SteamLibrary\steamapps\common\PlagueInc\Mods\$(ProjectName)"
 start XCOPY /Y /R "$(ProjectDir)\Statics\Info.json" "D:\SteamLibrary\steamapps\common\PlagueInc\Mods\$(ProjectName)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
