--- a/PIStatsOverlay.csproj
+++ b/PIStatsOverlay.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>D:\SteamLibrary\steamapps\common\PlagueInc\PlagueIncEvolved_Data\Managed\UnityModManager\0Harmony.dll</HintPath>
@@ -73,6 +76,8 @@
     <Compile Include="Objects\StatsOverlay.cs" />
     <Compile Include="Patches\CureProgressPatch.cs" />
     <Compile Include="Patches\DiseaseStatsPatch.cs" />
+    <Compile Include="Patches\GameDatePatch.cs" />
+    <Compile Include="Patches\GameScorePatch.cs" />
     <Compile Include="Patches\TechDescPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Logger.cs" />
